--- a/manager/templates/dashboard_manager.html
+++ b/manager/templates/dashboard_manager.html
@@ -41,28 +41,28 @@
                         <div class="grid md:grid-cols-2 text-sm">
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nama Depan</div>
-                                <div class="px-4 py-3">Bang</div>
+                                <div class="px-4 py-3">{{namaDepan}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nama Belakang</div>
-                                <div class="px-4 py-3">Messi</div>
+                                <div class="px-4 py-3">{{namaBelakang}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nomor HP</div>
-                                <div class="px-4 py-3">0812345678</div>
+                                <div class="px-4 py-3">{{nomorHP}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Email</div>
-                                <div class="px-4 py-3">messi@gmail.com</div>
+                                <div class="px-4 py-3">{{email}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Alamat</div>
-                                <div class="px-4 py-3">Jalan Kesatuan no. 56, Depok</div>
+                                <div class="px-4 py-3">{{alamat}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Status</div>
                                 <div class="px-4 py-3">
-                                    Dosen
+                                    {{status}}
                                 </div>
                             </div>
                         </div>
