--- a/panitia/templates/dashboard_panitia.html
+++ b/panitia/templates/dashboard_panitia.html
@@ -41,34 +41,34 @@
                         <div class="grid md:grid-cols-2 text-sm">
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nama Depan</div>
-                                <div class="px-4 py-3">Alfred</div>
+                                <div class="px-4 py-3">{{namaDepan}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nama Belakang</div>
-                                <div class="px-4 py-3">Enoch</div>
+                                <div class="px-4 py-3">{{namaBelakang}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nomor HP</div>
-                                <div class="px-4 py-3">0812345678</div>
+                                <div class="px-4 py-3">{{nomorHP}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Email</div>
-                                <div class="px-4 py-3">alfy@gmail.com</div>
+                                <div class="px-4 py-3">{{email}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Alamat</div>
-                                <div class="px-4 py-3">Jalan Kesatuan no. 57, Depok</div>
+                                <div class="px-4 py-3">{{alamat}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Status</div>
                                 <div class="px-4 py-3">
-                                    Mahasiswa
+                                    {{status}}
                                 </div>
                             </div>
                             <div class="grid grid-cols-2">
                               <div class="px-4 py-3 font-semibold">Jabatan</div>
                               <div class="px-4 py-3">
-                                Ketua Perlengkapan
+                                {{jabatan}}
                               </div>
                           </div>
                         </div>
