--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -22,26 +22,26 @@
   </head>
     <body class="bg-gray-200">
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-            <div class="items-center w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-                <h1 class="items-center self-center text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+            <div class="items-center w-full bg-black rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+                <h1 class=" text-center text-white text-xl font-bold text-gray-900 md:text-2xl dark:text-white p-4">
                     Login to your account
                 </h1>
-                <div class="text-center p-6 space-y-4 md:space-y-6 sm:p-8">
+                <form method="POST" action="{% url 'user:loginPage' %}" class="text-center p-4 space-y-4 md:space-y-6 sm:p-8">
+                    {% csrf_token %}
                     <ul class="items-center flex-block">
-                        <div class="mb-3">
-                            <label style ="color: aliceblue;"for="Inputusername" class="form-label">Username</label>
-                            <input type="username" class="form-control" id="Inputusername" name="username" required>
-                          </div>
-                        <div class="mb-3">
-                            <label style ="color: aliceblue;"for="InputPassword"  class="form-label">password</label>
-                            <input type="password" class="form-control" id="Inputpassword" name="password" required>
-                        </div>
-                        <button  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                            LOGIN
-                        </button>
+                      <div class="mb-3 p-2">
+                        <label style="color: aliceblue;" for="Inputusername" class="form-label">Username</label>
+                        <input type="username" class="form-control p-1" id="Inputusername" name="username" required>
+                      </div>
+                      <div class="mb-3">
+                        <label style="color: aliceblue;" for="InputPassword" class="form-label">Password</label>
+                        <input type="password" class="form-control p-1" id="Inputpassword" name="password" required>
+                      </div>
+                      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                        LOGIN
+                      </button>
                     </ul>
-                    
-                </div>
+                  </form>
             </div>
         </div>
     </body>
