--- a/penonton/templates/dashboardPenonton.html
+++ b/penonton/templates/dashboardPenonton.html
@@ -42,28 +42,28 @@
                         <div class="grid md:grid-cols-2 text-sm">
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nama Depan</div>
-                                <div class="px-4 py-3">Kaci</div>
+                                <div class="px-4 py-3">{{namaDepan}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nama Belakang</div>
-                                <div class="px-4 py-3">Brooke</div>
+                                <div class="px-4 py-3">{{namaBelakang}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Nomor HP</div>
-                                <div class="px-4 py-3">0812345678</div>
+                                <div class="px-4 py-3">{{nomorHP}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Email</div>
-                                <div class="px-4 py-3">kaci@gmail.com</div>
+                                <div class="px-4 py-3">{{email}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Alamat</div>
-                                <div class="px-4 py-3">Jalan Kesatuan no. 58, Depok</div>
+                                <div class="px-4 py-3">{{alamat}}</div>
                             </div>
                             <div class="grid grid-cols-2">
                                 <div class="px-4 py-3 font-semibold">Status</div>
                                 <div class="px-4 py-3">
-                                    Mahasiswa
+                                    {{status}}
                                 </div>
                             </div>
                         </div>
