--- a/manager/templates/dashboard_manager.html
+++ b/manager/templates/dashboard_manager.html
@@ -72,7 +72,7 @@
                 <!-- End of about section -->
                 <div class="my-4"></div>
                 <div class="bg-white p-10 shadow-sm rounded-sm">
-                    <div class="grid grid-cols-2">
+                    <div class="">
                         <div>
                             <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
                                 <span clas="text-green-500">
@@ -96,14 +96,14 @@
 
                                     <div class="container mx-auto mt-2">
                                         <div
-                                          class="max-w-2xl"
+                                          class="w-full"
                                           x-data="{ 
                                               faqOne: false,
                                               faqTwo: false,
                                               faqThree: false,
                                               activeClass: 'bg-teal-600 focus:outline-none',
                                           }"
-                                          class="p-6 mx-auto bg-white"
+                                          class="p-6 mx-auto bg-white w-full"
                                         >
                                           <div class="mb-4">
                                             <div
@@ -143,13 +143,69 @@
                                                       Anggota Tim: 
                                                     </p>
                                                       <ul>
-                                                          {% for pemain in list_pemain %}
-                                                              <li>
-                                                                  <p class ="text-gray-500 text-sm">
-                                                                      {{pemain}}
-                                                                  </p>
-                                                              </li>  
-                                                          {% endfor %}
+                                                        <div class="relative overflow-x-auto">
+                                                            <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+                                                                <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                                                                    <tr>
+                                                                        <th scope="col" class="px-6 py-3">
+                                                                            Nama Depan
+                                                                        </th>
+                                                                        <th scope="col" class="px-6 py-3">
+                                                                            nama Belakang
+                                                                        </th>
+                                                                        <th scope="col" class="px-6 py-3">
+                                                                            Nomor HP
+                                                                        </th>
+                                                                        <th scope="col" class="px-6 py-3">
+                                                                            Tanggal Lahir
+                                                                        </th>
+                                                                        <th scope="col" class="px-6 py-3">
+                                                                            Status Kapten
+                                                                        </th>
+                                                                        <th scope="col" class="px-6 py-3">
+                                                                            Posisi
+                                                                        </th>
+                                                                        <th scope="col" class="px-6 py-3">
+                                                                            NPM
+                                                                        </th>
+                                                                        <th scope="col" class="px-6 py-3">
+                                                                            Jenjang
+                                                                        </th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                    {% for pemain in list_pemain %}
+                                                                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                                                                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                                                                            {{pemain.namaDepan}}
+                                                                        </th>
+                                                                        <td class="px-6 py-4">
+                                                                            {{pemain.namaBelakang}}
+                                                                        </td>
+                                                                        <td class="px-6 py-4">
+                                                                            {{pemain.nomorHP}}
+                                                                        </td>
+                                                                        <td class="px-6 py-4">
+                                                                            {{pemain.tanggalLahir}}
+                                                                        </td>
+                                                                        <td class="px-6 py-4">
+                                                                            {{pemain.isCaptain}}
+                                                                        </td>
+                                                                        <td class="px-6 py-4">
+                                                                            {{pemain.posisi}}
+                                                                        </td>
+                                                                        <td class="px-6 py-4">
+                                                                            {{pemain.npm}}
+                                                                        </td>
+                                                                        <td class="px-6 py-4">
+                                                                            {{pemain.jenjang}}
+                                                                        </td>
+                                                                    </tr>
+                                                                    {% endfor %}
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
+                                                          
                                                       </ul>  
                                                   </div>
                                             </div>
@@ -159,11 +215,6 @@
                                 </li>
                             </ul>
                             {% endif %}
-                        </div>
-                        <div>
-                            <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8 mb-3">
-                            </div>
-                            
                         </div>
                     </div>
                 </div>
