--- a/manager/templates/schedule_booking.html
+++ b/manager/templates/schedule_booking.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %} {% block content %}
 <head>
-  <title>List Waktu Stadium {{ stadium_name }}</title>
+  <title>List Waktu Stadium {{ stadium }}</title>
 </head>
 <body class="bg-gray-100">
   {% include 'navbar_manager.html' %}
-  <h1 class="text-3xl font-bold mt-6">{{ stadium_name }} Stadium</h1>
+  <h1 class="text-3xl font-bold mt-6 text-center">Stadium {{stadium}}</h1>
   <table class="table-auto mt-8 mx-auto">
     <thead>
       <tr>
@@ -14,58 +14,78 @@
     </thead>
     <tbody>
       <tr>
-        <td class="border px-4 py-2">07:00 - 08:00</td>
+        <td class="border px-4 py-2">07:00 - 09:00</td>
         <td class="border px-4 py-2">
+          {% if "07:00:00" not in jamHadir %}
+            Sudah dipesan
+          {% else %}
           <button
             type="button"
             class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
           >
             Pesan
           </button>
+          {% endif %}
         </td>
       </tr>
       <tr>
-        <td class="border px-4 py-2">08:00 - 09:00</td>
+        <td class="border px-4 py-2">10:00 - 12:00</td>
         <td class="border px-4 py-2">
+          {% if "10:00:00" not in jamHadir %}
+            Sudah dipesan
+          {% else %}
           <button
             type="button"
             class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
           >
             Pesan
           </button>
+          {% endif %}
         </td>
       </tr>
       <tr>
-        <td class="border px-4 py-2">09:00 - 10:00</td>
+        <td class="border px-4 py-2">13:00 - 15:00</td>
         <td class="border px-4 py-2">
+          {% if "13:00:00" not in jamHadir %}
+            Sudah dipesan
+          {% else %}
           <button
             type="button"
             class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
           >
             Pesan
           </button>
+          {% endif %}
         </td>
       </tr>
       <tr>
-        <td class="border px-4 py-2">10:00 - 11:00</td>
+        <td class="border px-4 py-2">16:00 - 18:00</td>
         <td class="border px-4 py-2">
+          {% if "16:00:00" not in jamHadir %}
+            Sudah dipesan
+          {% else %}
           <button
             type="button"
             class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
           >
             Pesan
           </button>
+          {% endif %}
         </td>
       </tr>
       <tr>
-        <td class="border px-4 py-2">11:00 - 12:00</td>
+        <td class="border px-4 py-2">19:00 - 21:00</td>
         <td class="border px-4 py-2">
+          {% if "19:00:00" not in jamHadir %}
+            Sudah dipesan
+          {% else %}
           <button
             type="button"
             class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
           >
             Pesan
           </button>
+          {% endif %}
         </td>
       </tr>
     </tbody>
