rename files for TK4 kuning

--- a/penonton/templates/beli_tiket.html
+++ b/penonton/templates/beli_tiket.html
@@ -2,7 +2,7 @@
     <head>
         <title>Beli Tiket</title>
     </head>
-    {#TODO: CR Pembelian Tiket#}
+    {#TODO: CR Pembelian Tiket Penonton#}
     <body>
     {% include 'navbar_penonton.html' %}
     <h1 class="text-3xl font-bold flex justify-center mt-10">Beli Tiket</h1>
