--- a/manager/templates/detailTim.html
+++ b/manager/templates/detailTim.html
@@ -22,16 +22,12 @@
         margin-left: auto; 
         margin-right: auto;
       }
-    div{position: absolute;
-      left: 50%;
-      bottom: 20px;
-      transform: translate(-50%, -50%);
-      margin: 0 auto;}
-</style>
+  </style>
 </head>
 
 <body>
-  <table class="tg">
+  {% include 'navbar_manager.html' %}
+  <table class="tg mt-10">
     <thead>
       <tr>
         <th class="tg-c3ow" colspan="8">TIM</th>
@@ -51,26 +47,24 @@
         <td class="tg-5w3z">Jenjang</td>
         <td class="tg-5w3z">Action</td>
       </tr>
+      {% if not daftar_pemain %}
       <tr>
-        <td class="tg-5w3z">Sinta Jojo</td>
-        <td class="tg-5w3z">085365478990</td>
-        <td class="tg-5w3z">09/08/2001</td>
-        <td class="tg-5w3z">Yes</td>
-        <td class="tg-5w3z">Striker</td>
-        <td class="tg-5w3z">2008996742</td>
-        <td class="tg-5w3z">S-1</td>
+        <td colspan = "8" class="tg-5w3z">Belum ada pemain</td>
+      </tr>
+      {% else %}
+      {% for pemain in daftar_pemain %}
+      <tr>
+        <td class="tg-5w3z">{{pemain.nama_lengkap}}</td>
+        <td class="tg-5w3z">{{pemain.nomor_hp}}</td>
+        <td class="tg-5w3z">{{pemain.tgl_lahir}}</td>
+        <td class="tg-5w3z">{{pemain.is_captain}}</td>
+        <td class="tg-5w3z">{{pemain.posisi}}</td>
+        <td class="tg-5w3z">{{pemain.npm}}</td>
+        <td class="tg-5w3z">{{pemain.jenjang}}</td>
         <td class="tg-5w3z"><a href="#" style="color: brown;"><u>Make Captain</u></a><br><a href="#" style="color: brown;"><u>Delete</u></a></td>
       </tr>
-      <tr>
-        <td class="tg-5w3z">Ahmad Burhan</td>
-        <td class="tg-5w3z">081264780089</td>
-        <td class="tg-5w3z">10/01/2008</td>
-        <td class="tg-5w3z">No</td>
-        <td class="tg-5w3z">Back</td>
-        <td class="tg-5w3z">1906656161</td>
-        <td class="tg-5w3z">S-2</td>
-        <td class="tg-5w3z"><a href="#" style="color: brown;"><u>Make Captain</u></a><br><a href="#" style="color: brown;"><u>Delete</u></a></td>
-      </tr>
+      {% endfor %}
+      {% endif %}
       <tr>
         <td class="tg-7k10" colspan="8"><span style="color:#FFF">PELATIH</span></td>
       </tr>
@@ -81,32 +75,42 @@
         <td class="tg-4m7p">Spesialiasi</td>
         <td class="tg-4m7p" colspan="4">Action</td>
       </tr>
+      {% if not daftar_pelatih %}
       <tr>
-        <td class="tg-4m7p">Mahmud</td>
-        <td class="tg-7od5">0849993833</td>
-        <td class="tg-7od5">mahmud56@gmail.com</td>
-        <td class="tg-7od5">tendangan</td>
+        <td colspan = "8" class="tg-4m7p">Belum ada pelatih</td>
+      </tr>
+      {% else %}
+      {% for pelatih in daftar_pelatih %}
+      <tr>
+        <td class="tg-4m7p">{{pelatih.nama_lengkap}}</td>
+        <td class="tg-7od5">{{pelatih.nomor_hp}}</td>
+        <td class="tg-7od5">{{pelatih.email}}</td>
+        <td class="tg-7od5">{{pelatih.spesialisasi}}</td>
         <td class="tg-4m7p" colspan="4"><a href="#" style="color: brown;"><u>Delete</u></a></td>
       </tr>
+      {% endfor %} 
+      {% endif %}
     </tbody>
+  </table>
     <div class="text-center p-6 space-y-4 md:space-y-6 sm:p-8">
       <ul class="items-center flex-block">
           <li class="py-3">
-              <a href="#">
-                  <button href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+              <a href="../pemain/">
+                  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                       PEMAIN
                   </button>
               </a>
           </li>
           <li class="py-3">
-              <a href="#">
-                  <button href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+              <a href="../pelatih/">
+                  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                       PELATIH
                   </button>
               </a>
           </li>
       </ul>
   </div>
+  
 </body>
 {% endblock content %}
 
