--- a/manager/templates/pelatih.html
+++ b/manager/templates/pelatih.html
@@ -3,6 +3,7 @@
   <title>Daftar Pemain</title>
 </head>
 <body>
+  {% include 'navbar_manager.html' %}
   <h1 class="text-3xl font-bold flex justify-center mt-10">
     Daftar Pemain Tim Huha
   </h1>
@@ -27,7 +28,10 @@
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-auto p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 name="pemain"
               >
-                <option value="ID">Mahmud - tendangan</option>
+                
+              {% for pelatih in pelatih_notim%}
+              <option >{{pelatih.nama_lengkap}} - {{pelatih.spesialisasi}}</option>
+              {% endfor %}
               </select>
             </th>
           </tr>
