Fix CR pembelian tiket, add R_list pertandingan penonton

--- a/manager/templates/list_pertandingan_manajer.html
+++ b/manager/templates/list_pertandingan_manajer.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     <h1 class="text-3xl font-bold flex justify-center mt-10">
-        List Pertandingan hai ferry
+        List Pertandingan
     </h1>
     <div class="mx-auto mt-10 w-3/5">
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
