--- a/penonton/templates/list_waktu_stadium.html
+++ b/penonton/templates/list_waktu_stadium.html
@@ -17,7 +17,7 @@
                     <th scope="col" class="px-6 py-3 bg-gray-200">Action</th>
                 </tr>
                 </thead>
-                {% for waktu in waktu_stadium_list %}
+                {% for waktu in waktu_list %}
                     <tbody>
                     <tr class="bg-white border-b dark:bg-gray-900 dark:border-gray-700">
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
