--- a/penonton/templates/pilih_pertandingan.html
+++ b/penonton/templates/pilih_pertandingan.html
@@ -3,6 +3,8 @@
     <head>
         <title>Pilih Pertandingan</title>
     </head>
+    {% include 'navbar_penonton.html' %}
+
     <body>
     <h1 class="text-3xl font-bold flex justify-center mt-10">
         Pilih Pertandingan
