--- a/manager/templates/pelatih.html
+++ b/manager/templates/pelatih.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %} {% block content %}
 <head>
-  <title>Daftar Pemain</title>
+  <title>Daftar Pelatih</title>
 </head>
 <body>
   {% include 'navbar_manager.html' %}
   <h1 class="text-3xl font-bold flex justify-center mt-10">
-    Daftar Pemain Tim Huha
+    Daftar Pelatih
   </h1>
   <div class="mx-auto mt-10 w-2/5">
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
@@ -23,16 +23,19 @@
               scope="row"
               class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white flex justify-center"
             >
+            <form method="POST" action="{% url 'manager:pilihPelatih' %}">
+              {% csrf_token %}
               <select
                 id="countries"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-auto p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                name="pemain"
+                name="pelatih"
               >
                 
-              {% for pelatih in pelatih_notim%}
-              <option >{{pelatih.nama_lengkap}} - {{pelatih.spesialisasi}}</option>
+              {% for pelatih in pelatih_notim %}
+              <option value = "{{pelatih.id_pelatih}}" >{{pelatih.nama_lengkap}} - {{pelatih.spesialisasi}}</option>
               {% endfor %}
               </select>
+            
             </th>
           </tr>
         </tbody>
@@ -40,10 +43,11 @@
     </div>
   </div>
   <div class="flex justify-center">
-    <button
+    <button type="submit"
       class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-10">
       SUBMIT
     </button>
   </div>
+</form>
 </body>
 {% endblock content %}
